flexc++ (2.01.00)

  * The algorithm to determine which rules are viable was changed. Now a
    rule's viability is determined from the generated DFAs: rules matched at
    DFA rows are now removed from a set of all rule indices. If any elements
    remain, then those rules cannot be matched. See also the section about
    'Finding non-viable rules' in the manual's technical documentation.

  * Generating files is prevented when errors in option/declaration
    specifications are encountered. All errors in option/declaration
    specifications (instead of just the first error that is encountered) 
    are now reported.

  * A warning is issued if an existing scanner.h file does not contain 'void
    postCode(PostEnum__'. The warning also offers an advice to add the
    required declaration/definition (showing the required code) to the
    scanner.h file.
    
  * References to line numbers of rules should now be correct, and should
    refer to the line number where the rule's regex is specified.

  * This version depends on bobcat >= 3.21.01, and uses Bobcat's Iterator
    class template. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 16 Mar 2014 10:14:15 +0100

flexc++ (2.00.00)

  * Completely re-implemented look-ahead operator (LOP) handling. The LOP is
    now handled through mini-scanners, the previously used class TailCount and
    the tail count Flag enum are no longer required and were removed from the
    implementation. See also parser/README.grammar.

  * Null-matching patterns using the look-ahead operator (e.g. a*/b) are
    dangerous, and can take the generated scanner into a non-terminating loop.
    When flexc++ detects such patterns it generates a warning. These warnings
    can be suppressed by writing 
    //%nowarn
    on the line immediately preceding the potentially null-matching pattern
    using the look-ahead operator.

  * Raw string literals, as defined by C++11, are supported

  * NOTE WELL: 
