@@ -1,125 +1,25 @@
 #include "INSTALL.im"
 
-    // Inspect the following #defines. Change them to taste. If you don't
-    // need a particular option, change its value into an empty string
-
-    // For more information about this file: 'man 7 icmconf'
-
-    // The final program and source containing main():
-    // ===============================================
-
-    // define the name of the source containing main():
 #define MAIN                "flexc++.cc"
-
-    // define any additional libraries the program may need:
 #define ADD_LIBRARIES       "bobcat"
-
-    // define any additional paths (other than the standard paths) the
-    // additional libraries are located in:
 #define ADD_LIBRARY_PATHS  ""
-
-    // Should a lexical scanner be constructed? If so, define the subdirectory 
-    // containing the scanner's specification file and see below at the
-    // scanner section for more defines
 #define SCANNER_DIR         "scanner"  
-
-    // Should a parser be constructed? If so, define the subdirectory
-    // containing the parser's specification file  and see below at the
-    // parser section for more defines
 #define PARSER_DIR          "parser"
-
-// ================== probably no configurations required below here =========
-
-    // Uncomment to relink the binary, even when no sources were
-    // changed (this is useful if, e.g., a library was rebuilt)
 #define REFRESH
-
-    // Defines related to the local libraries to create:
-    // =================================================
-
-    // Uncomment to create a local library rather (when a binary program is 
-    // built it will be linked against the library rather than the individual
-    // object modules). Change the lib's name at you own digression (don't use
-    // lib or an extension like .a)
 #define LIBRARY           "modules"
-
 #define SHAREDREQ           ""
-
-    // #defines used for compilation and linking:
-    // ==========================================
-
-    // Uncomment to clear the screen just before starting the compilation
-    // process 
-//#define CLS
-
-    // Uncomment to use the ALL facility and a class dependency setup in the
-    // CLASSES file. When a directory contains a file ALL (optionally rename
-    // this filename by providing an alternative name) then all its sources
-    // and all sources of all classes depending on it are also compiled.  
-    // Class dependencies are indicated by the class name (as the first
-    // word on a line) optionally followed by additional class names, which
-    // are the classes directly depending on the line's first class name.
 #define USE_ALL             "a"
-
-    // define the pattern to locate sources in a directory:
 #define SOURCES             "*.cc"
-
-    // Some #defines, used to create parsers and lexical scanners 
-    // ==========================================================
-
-    // Lexical Scanner section
-    // =======================
-
-    // What is the program generating the lexical scanner?
 #define SCANGEN             "flexc++"
-
-    // Flags to provide SCANGEN with:
 #define SCANFLAGS           ""
-
-    // Name of the lexical scanner specification file
 #define SCANSPEC            "lexer"
-
-    // Specify additional lexer specification files using patterns
-    // these files are (in)directly included by SCANSPEC
-//#define SCANFILES            ""
-    
-    // Name of the file generated by the lexical scanner
 #define SCANOUT             "lex.cc"
-
-
-    // Parser section
-    // ==============
-
-    // What is the program generating a parser?
 #define PARSGEN             "bisonc++"
-
-    // Flags to provide PARSGEN with:
 #define PARSFLAGS           "-V"
-
-    // What is the grammar specification file?
 #define PARSSPEC            "grammar"
-
-    // Specify additional grammar specification files using patterns
-    // these files are (in)directly included by PARSSPEC. Specify patterns
-    // relative to PARSER_DIR
 #define PARSFILES           "inc/*"
-
-    // Name of the file generated by the parser generator containing the 
-    // parser function
 #define PARSOUT             "parse.cc"
-
-
-    // Additional defines, which normally require no modification
-    // ==========================================================
-
-    // should commands be echoed (ON) or not (OFF) ?
 #define USE_ECHO              ON
-
-    // Directory below this directory to contain temporary results
 #define TMP_DIR             "tmp"
-
-    //  The extension of object modules:
 #define OBJ_EXT             ".o"
-
-    //  Use the VERSION file
 #define USE_VERSION
