@@ -89,6 +89,8 @@ section_delimiter:
         d_nLOPstartConditions = d_rules.startConditions().size();
         d_rules.setEndUserSC();
         reset();
+        if (d_scanner.endOfInput())
+            ACCEPT();
     }
 ;
 
