@@ -1,4 +1,4 @@
-// Generated by Bisonc++ V4.05.00 on Fri, 07 Feb 2014 14:22:04 +0100
+// Generated by Bisonc++ V4.09.02 on Fri, 13 Mar 2015 14:47:58 +0100
 
 // $insert class.ih
 #include "parser.ih"
@@ -2426,9 +2426,7 @@ ParserBase::ParserBase()
 {}
 
 // $insert debugfunctions
-
 std::ostringstream ParserBase::s_out__;
-
 std::ostream &ParserBase::dflush__(std::ostream &out)
 {
     std::ostringstream &s_out__ = dynamic_cast<std::ostringstream &>(out);
@@ -2439,7 +2437,8 @@ std::ostream &ParserBase::dflush__(std::ostream &out)
     return out;
 }
 
-std::string ParserBase::stype__(char const *pre, STYPE__ const &semVal, char const *post) const
+std::string ParserBase::stype__(char const *pre, 
+                 STYPE__ const &semVal, char const *post) const
 {
     return "";
 }
@@ -2449,13 +2448,14 @@ std::string ParserBase::symbol__(int value) const
     ostringstream ostr;
     SMap::const_iterator it = s_symbol.find(value);
     if (it != s_symbol.end())
-        ostr << "`" << it->second << "'";
+        ostr << '\'' << it->second << '\'';
     else if (isprint(value))
-        ostr << "`" << static_cast<char>(value) << "' (" << value << ")";
+        ostr << '`' << static_cast<char>(value) << "' (" << value << ')';
     else
-        ostr << "'\\x" << setfill('0') << hex << setw(2) << value << "'";
+        ostr << "'\\x" << setfill('0') << hex << setw(2) << value << '\'';
     return ostr.str();
 }
+
 
 
 void Parser::print__()
@@ -2556,11 +2556,13 @@ try
          d_nLOPstartConditions = d_rules.startConditions().size();
          d_rules.setEndUserSC();
          reset();
+         if (d_scanner.endOfInput())
+         ACCEPT();
          }
         break;
 
         case 3:
-#line 97 "grammar"
+#line 99 "grammar"
         {
          d_val__.get<Tag__::STRING>() = d_matched;
          }
@@ -2626,6 +2628,17 @@ try
 #line 59 "inc/directives"
         {
          d_scanner.addDefinition(d_vsp__[-1].data<Tag__::STRING>(), d_vsp__[0].data<Tag__::TEXTTYPE>());
+         }
+        break;
+
+        case 19:
+#line 78 "inc/directives"
+        {
+         if (d_scanner.endOfInput())
+         {
+         emsg << "Section delimiter %% expected" << endl;
+         ABORT();
+         }
          }
         break;
 
@@ -3233,6 +3246,14 @@ try
          }
         break;
 
+        case 158:
+#line 15 "inc/rules"
+        {
+         if (d_scanner.endOfInput())
+         ACCEPT();
+         }
+        break;
+
     }
     // $insert debug
     if (d_debug__)
@@ -3292,17 +3313,17 @@ void Parser::nextToken()
 // used with the --debug option
 int Parser::lookup(bool recovery)
 {
-    // $insert threading
-    SR__ *sr = s_state[d_state__];        // get the appropriate state-table
-    int lastIdx = sr->d_lastIdx;        // sentinel-index in the SR__ array
-
+// $insert threading
+    SR__ *sr = s_state[d_state__];          // get the appropriate state-table
+    int lastIdx = sr->d_lastIdx;            // sentinel-index in the SR__ array
+    
     SR__ *lastElementPtr = sr + lastIdx;
-    SR__ *elementPtr = sr + 1;            // start the search at s_xx[1]
-
-    lastElementPtr->d_token = d_token__;// set search-token
-
+    lastElementPtr->d_token = d_token__;    // set search-token
+    
+    SR__ *elementPtr = sr + 1;              // start the search at s_xx[1]
     while (elementPtr->d_token != d_token__)
         ++elementPtr;
+    
 
     if (elementPtr == lastElementPtr)   // reached the last element
     {
@@ -3336,15 +3357,15 @@ int Parser::lookup(bool recovery)
     if (d_debug__)
     {
         s_out__ <<  "lookup(" << d_state__ << ", " << symbol__(d_token__);
-
-        if (action < 0)             // a reduction is found
+    
+        if (action < 0)             // a reduction was found
             s_out__ << "): reduce by rule " << -action;
         else if (action == 0)
             s_out__ <<  "): ACCEPT";
-        else 
-            s_out__ <<  "): shift " << action << " (" << symbol__(d_token__) << 
+        else
+            s_out__ <<  "): shift " << action << " (" << symbol__(d_token__) <<
                         " processed)";
-
+    
         s_out__ << "\n" << dflush__;
     }
 
@@ -3551,14 +3572,6 @@ catch (Return__ retValue)
         s_out__ <<  "parse(): returns " << retValue << "\n" << dflush__;
     return retValue;
 }
-
-// $insert polymorphicImpl
-namespace Meta__
-{
-   Base::~Base()
-   {}
-}
-
 
 
 
