@@ -1,4 +1,4 @@
-// Generated by Bisonc++ V4.05.00 on Fri, 07 Feb 2014 14:22:04 +0100
+// Generated by Bisonc++ V4.09.02 on Fri, 13 Mar 2015 14:47:58 +0100
 
 #ifndef ParserBase_h_included
 #define ParserBase_h_included
@@ -9,8 +9,6 @@
 
 // $insert preincludes
 #include <memory>
-#include <stdexcept>
-#include <type_traits>
 #include "preinclude.h"
 // $insert debugincludes
 #include <iostream>
@@ -39,7 +37,7 @@ enum class Tag__
 namespace Meta__
 {
     template <Tag__ tag>
-    struct TypeOfBase;
+    struct TypeOf;
 
     template <typename Tp_>
     struct TagOf;
@@ -82,75 +80,41 @@ namespace Meta__
     };
 
     template <>
-    struct TypeOfBase<Tag__::INTERVAL>
+    struct TypeOf<Tag__::INTERVAL>
     {
-        typedef Interval DataType;
+        typedef Interval type;
     };
 
     template <>
-    struct TypeOfBase<Tag__::CHARCLASS>
+    struct TypeOf<Tag__::CHARCLASS>
     {
-        typedef CharClass DataType;
+        typedef CharClass type;
     };
 
     template <>
-    struct TypeOfBase<Tag__::PATTERN>
+    struct TypeOf<Tag__::PATTERN>
     {
-        typedef Pattern DataType;
+        typedef Pattern type;
     };
 
     template <>
-    struct TypeOfBase<Tag__::STRING>
+    struct TypeOf<Tag__::STRING>
     {
-        typedef std::string DataType;
+        typedef std::string type;
     };
 
     template <>
-    struct TypeOfBase<Tag__::VECTOR>
+    struct TypeOf<Tag__::VECTOR>
     {
-        typedef std::vector<std::string> DataType;
+        typedef std::vector<std::string> type;
     };
 
     template <>
-    struct TypeOfBase<Tag__::TEXTTYPE>
+    struct TypeOf<Tag__::TEXTTYPE>
     {
-        typedef FlexTypes::TextType DataType;
+        typedef FlexTypes::TextType type;
     };
 
-
-        // determining the nature of a polymorphic semantic value:
-        // if it's a class-type, use 'Type const &' as returntype of const
-        // functions; if it's a built-in type (like 'int') use Type:
-
-    struct ClassType
-    {
-        char _[2];
-    };
-    
-    struct BuiltinType
-    {
-        char _;
-    };
-
-    template <typename T>
-    BuiltinType test(...);
-
-    template <typename T>
-    ClassType test(void (T::*)());
-
-    template <Tag__ tg_>
-    struct TypeOf: public TypeOfBase<tg_>
-    {
-        typedef typename TypeOfBase<tg_>::DataType DataType;
-        enum: bool 
-        { 
-            isBuiltinType = sizeof(test<DataType>(0)) == sizeof(BuiltinType)
-        };
-
-        typedef typename std::conditional<
-                    isBuiltinType, DataType, DataType const &
-                >::type ReturnType;
-    };
 
         // The Base class: 
         // Individual semantic value classes are derived from this class.
@@ -166,85 +130,57 @@ namespace Meta__
 
         public:
             Base(Base const &other) = delete;
-            virtual ~Base();
 
             Tag__ tag() const;
     
             template <Tag__ tg_>
-            typename TypeOf<tg_>::ReturnType get() const;
-    
-            template <Tag__ tg_>
-            typename TypeOf<tg_>::DataType &get();
+            typename TypeOf<tg_>::type &get();
     };
     
         // The class Semantic is derived from Base. It stores a particular
-        // semantic value type. The stored data are declared 'mutable' to
-        // allow the definitions of a const and non-const conversion operator.
-        // This way, const objects continue to offer non-modifiable data
+        // semantic value type. 
     template <Tag__ tg_>
     class Semantic: public Base
     {
-        typedef typename TypeOf<tg_>::DataType DataType;
+        typedef typename TypeOf<tg_>::type DataType;
     
-        mutable DataType d_data;
+        DataType d_data;
     
         public:
-            typedef typename TypeOf<tg_>::ReturnType ReturnType;
-    
                 // The default constructor and constructors for 
                 // defined data types are available
             Semantic();
             Semantic(DataType const &data);
             Semantic(DataType &&tmp);
 
-                // Conversion operators allow const/non-const access to d_data
-            operator ReturnType() const;
-            operator DataType &();
+            DataType &data();
     };
 
         // The class Stype wraps the shared_ptr holding a pointer to Base.
         // It becomes the polymorphic STYPE__
-        // Constructors expect (l/r-value) references to defined semantic
-        // value types.
         // It also wraps Base's get members, allowing constructions like
         // $$.get<INT> to be used, rather than $$->get<INT>.
-        // Furthermore, its operator= can be used to assign a Semantic *
+        // Its operator= can be used to assign a Semantic *
         // directly to the SType object. The free functions (in the parser's
         // namespace (if defined)) semantic__ can be used to obtain a 
         // Semantic *. 
-    class SType: public std::shared_ptr<Base>
+    struct SType: public std::shared_ptr<Base>
     {
-        public:
-            SType() = default;
-            SType(SType const &other) = default;
-            SType(SType &&tmp) = default;
-        
-            SType &operator=(SType const &rhs) = default;
-            SType &operator=(SType &&tmp) = default;
-            template <typename Tp_>
-            SType &operator=(Tp_ &&value);
+        template <typename Tp_>
+        SType &operator=(Tp_ &&value);
 
-            Tag__ tag() const;
+        Tag__ tag() const;
 
-                // this get()-member checks for 0-pointer and correct tag 
-                // in shared_ptr<Base>, and may throw a logic_error
-            template <Tag__ tg_>                    
-            typename TypeOf<tg_>::ReturnType get() const;
-    
-                // this get()-member checks for 0-pointer and correct tag 
-                // in shared_ptr<Base>, and resets the shared_ptr's Base * 
-                // to point to Meta::__Semantic<tg_>() if not
-            template <Tag__ tg_>
-            typename TypeOf<tg_>::DataType &get();
+            // this get()-member checks for 0-pointer and correct tag 
+            // in shared_ptr<Base>, and resets the shared_ptr's Base * 
+            // to point to Meta::__Semantic<tg_>() if not
+        template <Tag__ tg_>
+        typename TypeOf<tg_>::type &get();
 
-                // the data()-members do not check, and may result in a 
-                // bad_cast exception or segfault if used incorrectly
-
-            template <Tag__ tg_>
-            typename TypeOf<tg_>::ReturnType data() const;
-
-            template <Tag__ tg_>
-            typename TypeOf<tg_>::DataType &data();
+            // the data()-member does not check, and may result in a 
+            // segfault if used incorrectly
+        template <Tag__ tg_>
+        typename TypeOf<tg_>::type &data();
     };
 
 }  // namespace Meta__
@@ -330,7 +266,7 @@ class ParserBase
 
 // $insert debugdecl
         static std::ostringstream s_out__;
-
+        
         std::string symbol__(int value) const;
         std::string stype__(char const *pre, STYPE__ const &semVal,
                             char const *post = "") const;
@@ -404,45 +340,33 @@ template <Tag__ tg_>
 inline Semantic<tg_>::Semantic()
 :
     Base(tg_),
-    d_data(typename TypeOf<tg_>::DataType())
+    d_data(typename TypeOf<tg_>::type())
 {}
 
 template <Tag__ tg_>
-inline Semantic<tg_>::Semantic(typename TypeOf<tg_>::DataType const &data)
+inline Semantic<tg_>::Semantic(typename TypeOf<tg_>::type const &data)
 :
     Base(tg_),
     d_data(data)
 {}
 
 template <Tag__ tg_>
-inline Semantic<tg_>::Semantic(typename TypeOf<tg_>::DataType &&tmp)
+inline Semantic<tg_>::Semantic(typename TypeOf<tg_>::type &&tmp)
 :
     Base(tg_),
     d_data(std::move(tmp))
 {}
 
 template <Tag__ tg_>
-inline Semantic<tg_>::operator ReturnType() const
+inline typename TypeOf<tg_>::type &Semantic<tg_>::data()
 {
     return d_data;
 }
 
 template <Tag__ tg_>
-inline Semantic<tg_>::operator typename Semantic<tg_>::DataType &()
+inline typename TypeOf<tg_>::type &Base::get()
 {
-    return d_data;
-}
-
-template <Tag__ tg_>
-inline typename TypeOf<tg_>::ReturnType Base::get() const
-{
-    return dynamic_cast<Semantic<tg_> const &>(*this);
-}
-
-template <Tag__ tg_>
-inline typename TypeOf<tg_>::DataType &Base::get()
-{
-    return dynamic_cast<Semantic<tg_> &>(*this);
+    return static_cast<Semantic<tg_> *>(this)->data();
 }
 
 inline Tag__ SType::tag() const
@@ -451,16 +375,7 @@ inline Tag__ SType::tag() const
 }
     
 template <Tag__ tg_>
-inline typename TypeOf<tg_>::ReturnType SType::get() const
-{
-    if (std::shared_ptr<Base>::get() == 0  || tag() != tg_)
-        throw std::logic_error("undefined semantic value requested");
-
-    return std::shared_ptr<Base>::get()->get<tg_>();
-}
-
-template <Tag__ tg_>
-inline typename TypeOf<tg_>::DataType &SType::get()
+inline typename TypeOf<tg_>::type &SType::get()
 {
                     // if we're not yet holding a (tg_) value, initialize to 
                     // a Semantic<tg_> holding a default value
@@ -471,13 +386,7 @@ inline typename TypeOf<tg_>::DataType &SType::get()
 }
 
 template <Tag__ tg_>
-inline typename TypeOf<tg_>::ReturnType SType::data() const
-{
-    return std::shared_ptr<Base>::get()->get<tg_>();
-}
-
-template <Tag__ tg_>
-inline typename TypeOf<tg_>::DataType &SType::data()
+inline typename TypeOf<tg_>::type &SType::data()
 {
     return std::shared_ptr<Base>::get()->get<tg_>();
 }
