@@ -1,3 +1,11 @@
+flexc++ (2.02.00)
+
+  * Wopke Hellinga and Mark Redeman noticed that flexc++ reported an error if
+    the last line of a rule definition does not end in a newline. This bug was
+    fixed in this release. 
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 13 Mar 2015 14:53:50 +0100
+
 flexc++ (2.01.00)
 
   * The algorithm to determine which rules are viable was changed. Now a
